force-app/main/default/objects/Account/fields/Pancard__c.field-meta.xml
<CustomField>
    <fullName>Pancard__c</fullName>
    <label>Pancard</label>
    <length>40</length>
    <type>Text</type>
</CustomField>