force-app/main/default/objects/Account/fields/StatusofPhone__c.field-meta.xml
<CustomField>
    <fullName>StatusofPhone__c</fullName>
    <label>StatusofPhone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>NotUpdated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>