force-app/main/default/objects/Account/recordTypes/Forpicklist.recordType-meta.xml
<RecordType>
    <fullName>Forpicklist</fullName>
    <active>true</active>
    <label>Forpicklist</label>
</RecordType>