force-app/main/default/objects/Account/recordTypes/Test2.recordType-meta.xml
<RecordType>
    <fullName>Test2</fullName>
    <active>false</active>
    <label>Test2</label>
</RecordType>