force-app/main/default/objects/Account/validationRules/PancardValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>PancardValidation</fullName>
    <active>false</active>
    <errorConditionFormula>!REGEX( Pancard__c, &quot;[a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}&quot;)</errorConditionFormula>
    <errorMessage>Invalid PanNumber</errorMessage>
</ValidationRule>