force-app/main/default/objects/Account/validationRules/user_permission.validationRule-meta.xml
<ValidationRule>
    <fullName>user_permission</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Site), $Profile.Name  &lt;&gt; &apos;System Administrator&apos;  || $Profile.Name &lt;&gt; &apos;Standard Platform User&apos;)</errorConditionFormula>
    <errorMessage>invalid user</errorMessage>
</ValidationRule>